fix: Organizando o arquivo style.css para começar a desenvolver a responsividade da página

--- a/footer.html
+++ b/footer.html
@@ -35,7 +35,8 @@
                 <a href="https://wa.me/c/559291146084" target="_blank" class="social-link">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share">
+                <a
+                    href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share">
                     <img src="source/logo_ifood.png" alt="Ifood">
                 </a>
             </div>
