--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<header class="main-header" >
+<header class="main-header">
     <div class="header-content">
         <div class="logo">
             <a href="index.html">
@@ -20,7 +20,8 @@
             <a href="https://wa.me/c/559291146084" target="_blank" class="social-link">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share" target="_blank" class="social-link">
+            <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share"
+                target="_blank" class="social-link">
                 <img src="source/ifood.svg" alt="iFood" class="icon-ifood">
             </a>
         </div>
