--- a/menu.html
+++ b/menu.html
@@ -24,86 +24,94 @@
         <section>
             <div class="weekly-cookies">
                 <div class="cookies-grid">
-                    <div class="cookie-item cookies5">
+                    <div class="cookie-item-menu cookies5">
                         <div class="cookie-image">
                             <img src="source/bolo chocolate.png" alt="Cookie 5">
                         </div>
                         <div class="cookie-text">
                             <h3>BOLOS</h3>
-                            <p>Sabor que desperta memórias, aroma que conquista e textura que derrete na boca. Nossos bolos são feitos com ingredientes selecionados, receitas exclusivas e um toque artesanal que faz toda diferença.</p>
+                            <p>Sabor que desperta memórias, aroma que conquista e textura que derrete na boca. Nossos
+                                bolos são feitos com ingredientes selecionados, receitas exclusivas e um toque artesanal
+                                que faz toda diferença.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20cat%C3%A1logo%20de%20BOLOS%20SIMPLES.%20Poderia%20me%20enviar%2C%20por%20favor%3F"
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
                     </div>
-                    <div class="cookie-item cookies6">
+                    <div class="cookie-item-menu cookies6">
                         <div class="cookie-text">
                             <h3>KITS PARA FESTA</h3>
-                            <p>Celebre com praticidade, estilo e muito sabor! Nossos kits para festa foram criados para transformar qualquer ocasião em um momento inesquecível, sem dor de cabeça.</p>
+                            <p>Celebre com praticidade, estilo e muito sabor! Nossos kits para festa foram criados para
+                                transformar qualquer ocasião em um momento inesquecível, sem dor de cabeça.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20cat%C3%A1logo%20de%20KITS%20PARA%20FESTAS.%20Poderia%20me%20enviar%2C%20por%20favor%3F"
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
-                    <div class="cookie-image">
+                        <div class="cookie-image">
                             <img src="source/galeria5.2.JPG" alt="Cookie 6">
                         </div>
                     </div>
-                    <div class="cookie-item cookies7">
+                    <div class="cookie-item-menu cookies7">
                         <div class="cookie-image">
                             <img src="source/bolo confeitado maior.png" alt="Cookie 7">
                         </div>
                         <div class="cookie-text">
                             <h3>BOLOS DE ANIVERSARIO</h3>
-                            <p>Celebre a vida com sabor, Nossos bolos de aniversário são verdadeiras obras de arte comestíveis feitos com ingredientes de alta qualidade, recheios cremosos e decorações que impressiona qualquer um.</p>
+                            <p>Celebre a vida com sabor, Nossos bolos de aniversário são verdadeiras obras de arte
+                                comestíveis feitos com ingredientes de alta qualidade, recheios cremosos e decorações
+                                que impressiona qualquer um.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20cat%C3%A1logo%20de%20BOLOS%20DE%20ANIVERS%C3%A1RIO.%20Poderia%20me%20enviar%2C%20por%20favor%3F"
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
                     </div>
-                    <div class="cookie-item cookies8">
+                    <div class="cookie-item-menu cookies8">
                         <div class="cookie-text">
                             <h3>DIVERSAS TORTAS</h3>
-                                <p>Elegância em forma de sabor! Nossas tortas são preparadas artesanalmente, com ingredientes selecionados e combinações que conquistam à primeira mordida.</p>
+                            <p>Elegância em forma de sabor! Nossas tortas são preparadas artesanalmente, com
+                                ingredientes selecionados e combinações que conquistam à primeira mordida.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20cat%C3%A1logo%20de%20DIVERSAS%20TORTAS.%20Poderia%20me%20enviar%2C%20por%20favor%3F"
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
-                                <div class="cookie-image">
-                                    <img src="source/torta2.png" alt="Cookie 8">
-                                </div>
-                            </div>
-                    <div class="cookie-item cookies9">
+                        <div class="cookie-image">
+                            <img src="source/torta2.png" alt="Cookie 8">
+                        </div>
+                    </div>
+                    <div class="cookie-item-menu cookies9">
                         <div class="cookie-image">
                             <img src="source/galeria5.1.JPG" alt="Cookie 9">
                         </div>
                         <div class="cookie-text">
                             <h3>KITS COM TORTAS</h3>
-                            <p>Comemorar ficou muito mais fácil! Com os nossos kits com torta para quem busca praticidade sem abrir mão do sabor e da elegância.</p>
+                            <p>Comemorar ficou muito mais fácil! Com os nossos kits com torta para quem busca
+                                praticidade sem abrir mão do sabor e da elegância.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20cat%C3%A1logo%20de%20KITS%20COM%20TORTAS.%20Poderia%20me%20enviar%2C%20por%20favor%3F"
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
-                        </div>
-                    <div class="cookie-item cookies10">
+                    </div>
+                    <div class="cookie-item-menu cookies10">
                         <div class="cookie-text">
                             <h3>KITS COMEMORATIVOS</h3>
-                                <p>Transforme cada celebração em um momento inesquecível, com nossos Kits Comemorativos Deixe suas festas inesquecíveis deliciosos e prontos para impressionar.</p>
+                            <p>Transforme cada celebração em um momento inesquecível, com nossos Kits Comemorativos
+                                Deixe suas festas inesquecíveis deliciosos e prontos para impressionar.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20cat%C3%A1logo%20de%20KITS%20COMEMORATIVOS.%20Poderia%20me%20enviar%2C%20por%20favor%3F"
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
-                                <div class="cookie-image">
-                                    <img src="source/galeria5.1.JPG" alt="Cookie 8">
-                                </div>
-                            </div>
+                        <div class="cookie-image">
+                            <img src="source/galeria5.1.JPG" alt="Cookie 8">
                         </div>
                     </div>
+                </div>
+            </div>
         </section>
 
         <section class="gallery-section">
