--- a/stores.html
+++ b/stores.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,24 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <div id="header"></div>
 
     <main>
         <section class="store-finder">
             <div class="store-finder-content">
-                <h1>Como chegar</h1>                
+                <h1>Como chegar</h1>
             </div>
             <div class="textura-fundo"></div>
 
             <div class="map-container" style="display:flex;gap:24px;align-items:flex-start;flex-wrap:wrap;">
-                <aside class="store-card" style="flex:1 1 360px;max-width:420px;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+                <aside class="store-card"
+                    style="flex:1 1 360px;max-width:420px;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
                     <header style="display:flex;align-items:center;gap:12px;">
-                        <div style="width:56px;height:56px;border-radius:8px;background:#fdecef;display:flex;align-items:center;justify-content:center;font-size:28px;">🍰</div>
+                        <div
+                            style="width:56px;height:56px;border-radius:8px;background:#fdecef;display:flex;align-items:center;justify-content:center;font-size:28px;">
+                            🍰</div>
                         <div>
                             <h2 style="margin:0 0 4px;font-size:1.25rem;">Ariane Cake's</h2>
                             <p style="margin:0;color:#666;font-size:0.95rem;">Nossa loja — Como chegar</p>
@@ -36,21 +41,44 @@
                         <h3 id="hours-heading" style="margin:0 0 8px 0;font-size:1rem;">Horário de funcionamento</h3>
                         <table style="width:100%;border-collapse:collapse;color:#333;font-size:0.95rem;">
                             <tbody>
-                                <tr><td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Segunda-feira</td><td style="padding:6px 0;text-align:right;color:#777;">Não abre</td></tr>
-                                <tr><td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Terça-feira</td><td style="padding:6px 0;text-align:right;color:#777;">Não abre</td></tr>
-                                <tr><td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Quarta-feira</td><td style="padding:6px 0;text-align:right;color:#777;">17:00 às 21:00</td></tr>
-                                <tr><td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Quinta-feira</td><td style="padding:6px 0;text-align:right;color:#777;">15:00 às 21:30</td></tr>
-                                <tr><td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Sexta-feira</td><td style="padding:6px 0;text-align:right;color:#777;">16:00 às 21:30</td></tr>
-                                <tr><td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Sábado</td><td style="padding:6px 0;text-align:right;color:#777;">16:00 às 23:00</td></tr>
-                                <tr><td style="padding:6px 0;">Domingo</td><td style="padding:6px 0;text-align:right;color:#777;">16:00 às 22:00</td></tr>
+                                <tr>
+                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Segunda-feira</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">Não abre</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Terça-feira</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">Não abre</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Quarta-feira</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">17:00 às 21:00</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Quinta-feira</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">15:00 às 21:30</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Sexta-feira</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">16:00 às 21:30</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Sábado</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">16:00 às 23:00</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:6px 0;">Domingo</td>
+                                    <td style="padding:6px 0;text-align:right;color:#777;">16:00 às 22:00</td>
+                                </tr>
                             </tbody>
                         </table>
                     </section>
                 </aside>
 
-                <div id="map" style="flex:2 1 560px;min-width:300px;height:600px;border-radius:12px;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.06);"></div>
+                <div id="map"
+                    style="flex:2 1 560px;min-width:300px;height:600px;border-radius:12px;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.06);">
+                </div>
             </div>
-        
+
 
         </section>
     </main>
@@ -60,6 +88,7 @@
     <script src="script.js"></script>
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAb3PNcWT3NyV3qdULAKt9D0QBU2WAb7c&libraries=places&callback=initMap">
-    </script>
+        </script>
 </body>
+
 </html>
