Fix: "Mudanças Mobile"

--- a/menu.html
+++ b/menu.html
@@ -99,7 +99,7 @@
                             </a>
                         </div>
                                 <div class="cookie-image">
-                                    <img src="source/galeria5.1.JPG" alt="Cookie 8">
+                                    <img src="source/Natal1.png" alt="Cookie 8">
                                 </div>
                             </div>
                         </div>
