--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
                             </a>
                         </div>
                     <div class="cookie-image">
-                            <img src="source/galeria5.2.JPG" alt="Cookie 6">
+                            <img src="source/kitbolo.png" alt="Cookie 6">
                         </div>
                     </div>
                     <div class="cookie-item cookies7">
@@ -78,7 +78,7 @@
                             </div>
                     <div class="cookie-item cookies9">
                         <div class="cookie-image">
-                            <img src="source/galeria5.1.JPG" alt="Cookie 9">
+                            <img src="source/kittorta.png" alt="Cookie 9">
                         </div>
                         <div class="cookie-text">
                             <h3>KITS COM TORTAS</h3>
