feat: Tornando o site responsivo

--- a/about.html
+++ b/about.html
@@ -14,13 +14,13 @@
 
     <main>
         <section>
-            <div class="about-header">
+            <div class="about-header container">
                 <h1>Historia</h1>
             </div>
             <div class="textura-fundo"></div>
         </section>
 
-        <section>
+        <section class="container">
             <div class="about-story-section">
                 <div class="about-image">
                     <img src="source/Perfil.jpeg" alt="Photo">
@@ -46,7 +46,7 @@
         </section>
 
         <section>
-            <div class="about-values-section">
+            <div class="about-values-section container">
                 <h2>Valores</h2>
                 <div class="values-grid">
                     <div class="value-item">
