--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <source src="source/video banner.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="hero-content">
+            <div class="hero-content container">
                 <h1>Destaques da semana</h1>
                 <p>Uma série de sabores marcantes.</p>
                 <a href="menu.html" class="btn btn-light">Menu</a>
@@ -28,13 +28,13 @@
             <div class="textura-fundo"></div>
         </section>
 
-        <section class="weekly-cookies">
+        <section class="weekly-cookies container">
             <h2>Mais vendidos</h2>
             <div class="cookies-grid">
                 <div class="div-position">
                     <div class="cookie-item">
-                        <img src="source/copa da felicidade.png" alt="Cookie 1">
-                        <div class="content-text">
+                        <img style="width: 180px;" src="source/copa da felicidade.png" alt="Cookie 1">
+                        <div style="margin-left: 20px;" class="content-text-left">
                             <h3>Copo da felicidade</h3>
                             <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de
                                 morango fresco, chantilly cremoso, bolo de chocolate fofinho e creme doce, finalizado
@@ -45,19 +45,19 @@
                 </div>
                 <div class="div-position2">
                     <div class="cookie-item">
-                        <div class="content-text">
+                        <div class="content-text-right">
                             <h3>Bolo de pote</h3>
                             <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião.
                                 Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido
                                 em um pote individual. Ideal para saborear a qualquer hora!</h4>
                         </div>
-                        <img src="source/torta.png" alt="Cookie 2">
+                        <img style="transform: rotate(0deg); width: 280px;" src="source/torta.png" alt="Cookie 2">
                     </div>
                 </div>
                 <div class="div-position">
                     <div class="cookie-item">
-                        <img src="source/bolo confeitado maior.png" alt="Cookie 2">
-                        <div class="content-text">
+                        <img style="transform: rotate(0deg); width: 250px;" src="source/bolo confeitado maior.png" alt="Cookie 2">
+                        <div class="content-text-left">
                             <h3>Bolo de festa</h3>
                             <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa
                                 são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais
@@ -69,7 +69,7 @@
         </section>
 
         <section class="info-section">
-            <div class="info-content">
+            <div class="container info-content">
                 <div class="info-image">
                     <img src="source/Apresentação Ariane Cake.png" alt="More than just cookies">
                 </div>
