--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
         </section>
 
         <section>
-            <div class="weekly-cookies">
+            <div class="weekly-cookies-menu">
                 <div class="cookies-grid">
                     <div class="cookie-item-menu cookies5">
                         <div class="cookie-image">
