--- a/stores.html
+++ b/stores.html
@@ -19,27 +19,26 @@
             </div>
             <div class="textura-fundo"></div>
 
-            <div class="map-container" style="display:flex;gap:24px;align-items:flex-start;flex-wrap:wrap;">
-                <aside class="store-card"
-                    style="flex:1 1 360px;max-width:420px;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
-                    <header style="display:flex;align-items:center;gap:12px;">
-                        <div
-                            style="width:56px;height:56px;border-radius:8px;background:#fdecef;display:flex;align-items:center;justify-content:center;font-size:28px;">
-                            🍰</div>
-                        <div>
-                            <h2 style="margin:0 0 4px;font-size:1.25rem;">Ariane Cake's</h2>
-                            <p style="margin:0;color:#666;font-size:0.95rem;">Nossa loja — Como chegar</p>
+            <div class="map-container">
+                <aside class="store-card">
+                    <header class="header-store">
+                        <div class="cake-icon">
+                            🍰
+                        </div>
+                        <div class="store-info">
+                            <h2>Ariane Cake's</h2>
+                            <p>Nossa loja — Como chegar</p>
                         </div>
                     </header>
 
-                    <address style="margin:16px 0;color:#333;line-height:1.4;font-style:normal;">
+                    <address class="store-address">
                         <p style="margin:0;"><strong>📍 Endereço:</strong> R. Surucuá, 37 - Tarumã, Manaus - AM</p>
                         <p style="margin:8px 0 0;"><strong>☎ Telefone:</strong> (92) 9114-6084</p>
                     </address>
 
-                    <section aria-labelledby="hours-heading" style="margin-top:12px;">
-                        <h3 id="hours-heading" style="margin:0 0 8px 0;font-size:1rem;">Horário de funcionamento</h3>
-                        <table style="width:100%;border-collapse:collapse;color:#333;font-size:0.95rem;">
+                    <section class="hours-heading" aria-labelledby="hours-heading">
+                        <h3 id="hours-heading">Horário de funcionamento</h3>
+                        <table >
                             <tbody>
                                 <tr>
                                     <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Segunda-feira</td>
@@ -74,8 +73,7 @@
                     </section>
                 </aside>
 
-                <div id="map"
-                    style="flex:2 1 560px;min-width:300px;height:600px;border-radius:12px;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.06);">
+                <div id="map" class="map">
                 </div>
             </div>
 
