feat: fazendo a responsividade do site - 2

--- a/stores.html
+++ b/stores.html
@@ -32,41 +32,41 @@
                     </header>
 
                     <address class="store-address">
-                        <p style="margin:0;"><strong>📍 Endereço:</strong> R. Surucuá, 37 - Tarumã, Manaus - AM</p>
-                        <p style="margin:8px 0 0;"><strong>☎ Telefone:</strong> (92) 9114-6084</p>
+                        <p><strong>📍 Endereço:</strong> R. Surucuá, 37 - Tarumã, Manaus - AM</p>
+                        <p><strong>☎ Telefone:</strong> (92) 9114-6084</p>
                     </address>
 
                     <section class="hours-heading" aria-labelledby="hours-heading">
                         <h3 id="hours-heading">Horário de funcionamento</h3>
-                        <table >
+                        <table>
                             <tbody>
                                 <tr>
-                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Segunda-feira</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">Não abre</td>
+                                    <td>Segunda-feira</td>
+                                    <td>Não abre</td>
                                 </tr>
                                 <tr>
-                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Terça-feira</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">Não abre</td>
+                                    <td>Terça-feira</td>
+                                    <td>Não abre</td>
                                 </tr>
                                 <tr>
-                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Quarta-feira</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">17:00 às 21:00</td>
+                                    <td>Quarta-feira</td>
+                                    <td>17:00 às 21:00</td>
                                 </tr>
                                 <tr>
-                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Quinta-feira</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">15:00 às 21:30</td>
+                                    <td>Quinta-feira</td>
+                                    <td>15:00 às 21:30</td>
                                 </tr>
                                 <tr>
-                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Sexta-feira</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">16:00 às 21:30</td>
+                                    <td>Sexta-feira</td>
+                                    <td>16:00 às 21:30</td>
                                 </tr>
                                 <tr>
-                                    <td style="padding:6px 0;border-bottom:1px solid #f0f0f0;">Sábado</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">16:00 às 23:00</td>
+                                    <td>Sábado</td>
+                                    <td>16:00 às 23:00</td>
                                 </tr>
                                 <tr>
-                                    <td style="padding:6px 0;">Domingo</td>
-                                    <td style="padding:6px 0;text-align:right;color:#777;">16:00 às 22:00</td>
+                                    <td>Domingo</td>
+                                    <td>16:00 às 22:00</td>
                                 </tr>
                             </tbody>
                         </table>
