--- a/index.html
+++ b/index.html
@@ -31,38 +31,34 @@
         <section class="weekly-cookies container">
             <h2>Mais vendidos</h2>
             <div class="cookies-grid">
-                <div class="div-position">
-                    <div class="cookie-item">
-                        <img style="width: 180px;" src="source/copa da felicidade.png" alt="Cookie 1">
-                        <div style="margin-left: 20px;" class="content-text-left">
-                            <h3>Copo da felicidade</h3>
-                            <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de
-                                morango fresco, chantilly cremoso, bolo de chocolate fofinho e creme doce, finalizado
-                                com chantilly no topo. Uma combinação deliciosa de sabores e texturas em um só copo.
-                            </h4>
-                        </div>
+                <div class="cookie-item">
+                    <img src="source/copa da felicidade.png" alt="Copo da felicidade">
+                    <div class="content-text-left">
+                        <h3>Copo da felicidade</h3>
+                        <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de
+                            morango fresco, chantilly cremoso, bolo de chocolate fofinho e creme doce, finalizado
+                            com chantilly no topo. Uma combinação deliciosa de sabores e texturas em um só copo.
+                        </h4>
                     </div>
                 </div>
-                <div class="div-position2">
-                    <div class="cookie-item">
-                        <div class="content-text-right">
-                            <h3>Bolo de pote</h3>
-                            <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião.
-                                Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido
-                                em um pote individual. Ideal para saborear a qualquer hora!</h4>
-                        </div>
-                        <img style="transform: rotate(0deg); width: 280px;" src="source/torta.png" alt="Cookie 2">
+                
+                <div class="cookie-item">
+                    <img src="source/torta.png" alt="Bolo de pote">
+                    <div class="content-text-right">
+                        <h3>Bolo de pote</h3>
+                        <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião.
+                            Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido
+                            em um pote individual. Ideal para saborear a qualquer hora!</h4>
                     </div>
                 </div>
-                <div class="div-position">
-                    <div class="cookie-item">
-                        <img style="transform: rotate(0deg); width: 250px;" src="source/bolo confeitado maior.png" alt="Cookie 2">
-                        <div class="content-text-left">
-                            <h3>Bolo de festa</h3>
-                            <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa
-                                são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais
-                                especial. Perfeitos para todos os gostos e ocasiões! Venha conferir nosso cardápio!</h4>
-                        </div>
+                
+                <div class="cookie-item">
+                    <img src="source/bolo confeitado maior.png" alt="Bolo de festa">
+                    <div class="content-text-left">
+                        <h3>Bolo de festa</h3>
+                        <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa
+                            são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais
+                            especial. Perfeitos para todos os gostos e ocasiões! Venha conferir nosso cardápio!</h4>
                     </div>
                 </div>
             </div>
