--- a/stores.html
+++ b/stores.html
@@ -73,8 +73,7 @@
                     </section>
                 </aside>
 
-                <div id="map" class="map">
-                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3984.374003127762!2d-60.045391725029496!3d-2.993520096982502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwNTknMzYuNyJTIDYwwrAwMiczNC4xIlc!5e0!3m2!1spt-BR!2sbr!4v1764511325109!5m2!1spt-BR!2sbr" width="70%" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
 
